--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="row">
                     <div class="col">
                         <article class="link">
-                            <a href="https://www.instagram.com/lebaldon_/">
+                            <a href="https://www.instagram.com/leandrobove/">
                                 <div class="text-center">
                                     <div class="instagram">
                                         <span class="icon"><i class="fab fa-instagram"></i></span>
